Move project to personal GCP account

--- a/infra/k8s/microservices/order-service/order-service-deployment.yaml
+++ b/infra/k8s/microservices/order-service/order-service-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         # --- Spring Boot microservice ---
         - name: order-service
-          image: asia-south1-docker.pkg.dev/agile-earth-477112-t9/microservices/order-service:0.1.10
+          image: us-central1-docker.pkg.dev/analog-fastness-476914-t3/microservices/order-service:0.1.11
           imagePullPolicy: Always
           ports:
             - containerPort: 8082
@@ -81,7 +81,7 @@ spec:
           image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.3
           args:
             - "--port=3306"
-            - "agile-earth-477112-t9:asia-south1:online-ordering-mysql"
+            - "analog-fastness-476914-t3:us-central1:online-ordering-mysql"
           # resources:
           #   requests:
           #     cpu: "50m"
