--- a/infra/k8s/frontend/frontend-deployment.yaml
+++ b/infra/k8s/frontend/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: asia-south1-docker.pkg.dev/agile-earth-477112-t9/frontend/app:0.7
+          image: us-central1-docker.pkg.dev/analog-fastness-476914-t3/frontend/app:0.7
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
